# OctopuSwap

./: .gitignore  README.md
api/: .env  .gitignore  README.md  amm-contract.json  coin-contract.json  config.ts  package.json  pnpm-lock.yaml  server.ts  sui-utils.ts  xbtc-contract.json  xsui-contract.json
api/helpers/: create-pool.ts  publish-contracts.ts  swap.ts
api/indexer/: amm-handler.ts  event-indexer.ts
api/prisma/: schema.prisma
client/benchmark/: Cargo.toml
client/benchmark/src/: main.rs
client/sdk/src/: lib.rs  main.rs  pool.rs  utils.rs
data/: README.md
move_contracts/: README.md
move_contracts/amm/: Move.toml
move_contracts/amm/sources/: amm.move
move_contracts/amm/tests/: amm_tests.move
move_contracts/amm_parallelization/: Move.toml
move_contracts/amm_parallization/: Move.toml
move_contracts/mycoins/: Move.toml
move_contracts/mycoins/sources/: mycoins.move
move_contracts/xbtc/: Move.toml
profiling/: README.md
profiling/sdk/: Cargo.toml
profiling/sdk/src/: pool.rs  utils.rs
results/: README.md
scripts/: README.md  benchmark.sh  start_sui_node.sh
sui-client/: .env.development  docker-entrypoint.sh  jest.config.js  sentry.server.config.js  tsconfig.json
sui-client/config/: csv2json-loader.js  next-csv2json.js
sui-client/public/: robots.txt
sui-client/server/: logger.js
ui/: .gitignore  CHANGELOG.md  Dockerfile  README.md  commitlint.config.js  ecosystem.config.js  next.config.js  package.json  sentry.client.config.js  tailwind.config.js
ui/server/: index.js  logger.js
ui/src/: instrumentation.ts
(+134 files in other folders)
