[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }

tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
sdk = {path = "../sdk"}
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bcs = "0.1.4"