[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui-move-build = { git = "https://github.com/mystenlabs/sui", package = "sui-move-build" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
sui-json = { git = "https://github.com/mystenlabs/sui", package = "sui-json" }
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }

shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }

tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"